hompage responsive added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <div class="logo">
                     <img src="img/Logo.svg" alt="logo">
                 </div>
+                <div class="mobilMenu">
+                    <img src="img/menu.svg" alt="menu">
+                </div>
                 <div class="headerMenu">
                     <div class="menuLeft">
                         <ul>
@@ -256,9 +259,11 @@
                 <div class="faqBody">
                     <div class="accordion">
                         <div class="accordionHeader">
-                            <h3>
-                                What are the benefits of using our app for business ?
-                            </h3>
+                            <button>
+                                <h3>
+                                    What are the benefits of using our app for business ?
+                                </h3>
+                            </button>
                         </div>
                         <div class="accordionBody">
                             <p>
@@ -423,40 +428,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="pageLinks">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Dashboard
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Features
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Benefits
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Faq
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Help
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+
                 <div class="socialMedia">
                     <ul>
                         <li>
